# synthetic_stats

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
ci/: environment-dev.yml  environment.yml
doc/: CONDA.md  bendat.md
hfreq/: bpassed_hilbert.ipynb  bpassed_xcontamination.ipynb  high.ipynb  localized.ipynb  localized_bpassed_hilbert.ipynb  main.ipynb  main_plots.ipynb  mle_estimation.ipynb  plots.ipynb  stationary.ipynb  wave.ipynb
low/: autocovariance.ipynb  gaussianp.ipynb  mean_variance.ipynb  mle_estimation.ipynb  mle_gaussian.ipynb  variogram.ipynb
mle/: autocovariance.ipynb  mean_variance.ipynb  mle_estimation.ipynb  mle_gaussian.ipynb  overall_diagnostics.ipynb  variogram.ipynb  variogram_skgstat.ipynb
notebooks/hfreq/: bpassed_hilbert.ipynb  bpassed_xcontamination.ipynb  high.ipynb  main.ipynb  main_plots.ipynb  stationary.ipynb  wave.ipynb
notebooks/low/: autocovariance.ipynb  gaussianp.ipynb  mean_variance.ipynb  mle_estimation.ipynb  mle_gaussian.ipynb  overall_diagnostics.ipynb  variogram.ipynb  variogram_skgstat.ipynb
notebooks/sandbox/: autocorrelation_cholesky.ipynb  autocorrelation_np.ipynb  cc_2021.ipynb  climth_chi2test.ipynb  correlated_motion.ipynb  demodulation_energy.ipynb  dev_wrapper.ipynb  exp_autocorr.ipynb  modulations.ipynb  slowfast_projections.ipynb  viggiano20.ipynb
notebooks/zoe/: aincoherence_energy_loss.ipynb  energy_low.ipynb
notes/: CONDA.md  bendat.md
sandbox/: autocorrelation_cholesky.ipynb  autocorrelation_np.ipynb  cc_2021.ipynb  climth_chi2test.ipynb  correlated_motion.ipynb  dev_wrapper.ipynb  exp_autocorr.ipynb  modulations.ipynb  slowfast_projections.ipynb  tseries.ipynb
sstats/: __init__.py  _version.py  filtering.py  hfreq.py  signals.py  sigp.py  tseries.py
zoe/: aincoherence_energy_loss.ipynb  energy_low.ipynb
