[metadata]
name = sstats
description = Synthetic time series generation and processing (xarray/dask)
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/apatlpo/synthetic_stats
author = Aurelien Ponte
author_email = aurelien.junk@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Source = https://github.com/apatlpo/synthetic_stats
    Tracker = https://github.com/apatlpo/synthetic_stats/issues
#Documentation = https://xrft.readthedocs.io/en/latest/

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    xarray
    dask
    dask-jobqueue
    zarr
    netcdf4
    jupyterlab
    ipywidgets
    seaborn
    scikit-learn
    scikit-gstat
    statsmodels
    sympy
    #pytorch
    #emd
    xhistogram
    xrft
    pywavelets
    kymatio
python_requires = >=3.9

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[options.extras_require]
io =
    cftime
agg =
    numpy_groupies
test =
    pytest >= 6.2.2
    pytest-cov
all =
    %(io)s
    %(agg)s
    %(test)s

[flake8]
exclude = __init__.py,pyproject.toml,.eggs,doc
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503

[isort]
known_first_party = xrft
known_third_party = xarray,dask,numpy,pandas,scipy,cftime,numpy_groupies,pytest,setuptools
